style.css
/* images and videos max out at full width */
img,
video {
  height: auto;
  max-width: 100%;
}

@font-face {
        font-family: "Gotham Narrow Bold";
        src: url("https://res.cloudinary.com/dsdage8vw/raw/upload/v1775260038/gotham-narrow-bold_nidwjp.otf");
}
@font-face {
        font-family: "Gotham Narrow Book";
        src: url("https://res.cloudinary.com/dsdage8vw/raw/upload/v1775260040/gotham-narrow-book_knzg5e.otf");
}

@font-face {
        font-family: "Gotham Narrow Book Italic";
        src: url("https://res.cloudinary.com/dsdage8vw/raw/upload/v1775260039/gotham-narrow-book-italic_fsjilr.otf");
}


h1{
  font-size: 30px;
  color: #000000;
  font-family: "Gotham Narrow Bold";
  text-transform: uppercase;
  line-height: 30px;
}
h2{
  font-size: 20px;
  color: #000000;
  font-family: "Gotham Narrow Bold";
  text-transform: uppercase;
  line-height: 28px;
  
}
h3{
  font-size: 16px;
  color: #000000;
  font-family: "Gotham Narrow Bold";
  text-transform: uppercase;
  line-height: 0px;
}
p1{
  font-size: 30px;
  color: #000000;
  font-family: "Gotham Narrow Book";
  line-height: 38px;
}
p2{
  font-size: 18px;
  color: #000000;
  font-family: "Gotham Narrow Book";
  line-height: 26px;
}
p3{
  font-size: 12px;
  color: #000000;
  font-family: "Gotham Narrow Book";
  line-height: 20px;
}
p4{
  font-size: 12px;
  color: #000000;
  font-family: "Gotham Narrow Book Italic";
  line-height: 20px;
  margin-bottom: 20px
}




a:link {
  color: #000000; 
  text-decoration: none; /* Removes underline from links */
}

a:hover {
 animation: changeHoverColor 8s infinite;
}
@keyframes changeHoverColor {
    0% {
        color: #66C7F1; /* Light BB Boy Blue */
    }
    15% {
        color: #4477BC; /* Steel Blue */
    }
    30% {
        color: #DE78AF; /* Dull Barbie Pink */
    }
    50% {
        color: #EF423F; /* Modern Red */
    }
    65% {
        color: #F7942E; /* Orange */
    }
      85% {
        color: #FFCC2E; /* French Fry Yellow */
    }
      100% {
        color: #6ABF69; /* Froggy Green */
  }}


a:visited {
  color: #000000; /* Purple color for visited links */
}



.text-right {
    text-align: right;
}

.container {
    display: grid;
    grid-template-columns: 200px 2fr 2fr;
    gap: 20px;
    margin-bottom: 100px;
    margin-top: 60px;

}

.column {
    padding: 0px;
}








.container1 {
    display: grid;
    grid-template-columns: 200px 2fr; 
    gap: 20px;
   margin-bottom: 100px;
  margin-top: 60px
}
.column1 {
    
    padding: 0px;
   position: relative;
 
}


hr {
    border: none;
    height: 2px; /* Sets the thickness of the hr */
    background-color: #000000;
}


line-style-1 {
    border: none;
    height: 5px;
  color: #000000
}

line-style-2 {
    border: none;
    height: 1px;
  color: #000000
}



nav {
  font-size: 20px;
  color: #000000;
  font-family: "Gotham Narrow Bold";
  text-transform: uppercase;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

nav ul li a {
    display: block;
    padding: 5px 0px;
    color: #000000;
    text-decoration: none;
  transition: color 0.3s;
}




nav ul li a:hover {
 animation: changeHoverColor 8s infinite;
}

@keyframes changeHoverColor {
    0% {
        color: #66C7F1; /* Light BB Boy Blue */
    }
    15% {
        color: #4477BC; /* Steel Blue */
    }
    30% {
        color: #DE78AF; /* Dull Barbie Pink */
    }
    50% {
        color: #EF423F; /* Modern Red */
    }
    65% {
        color: #F7942E; /* Orange */
    }
      85% {
        color: #FFCC2E; /* French Fry Yellow */
    }
      100% {
        color: #6ABF69; /* Froggy Green */
  }}

nav ul li a.active {
    color:;
   text-decoration: underline;
   text-decoration-thickness: 2px;
}













body {
    margin-top: 0px;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-left: 5px;
 
    padding-left: 20px;
}
section {
    margin-top: 20px; /* Add a margin of 20px on the top side */
    margin-bottom: 20px; /* Add a margin of 30px on the bottom side */
}



<style>
.item {
    padding: 20px;
    margin: 10px;
    cursor: 
}
</style>


/* styles.css */
.accordion-item {
    border: 1px solid #000000;
    margin-bottom: 10px;
}

.accordion-header {
    padding: 0px;
    cursor: pointer;
    display: flex;
    align-items: center;
  margin-top: -10px;
}

.accordion-arrow {
    margin-left: auto;
  margin-top: 12px;
    transition: transform 0.3s ease;
  width: 10px;
  height: 10px;
  border-right: 2px solid #000000;
  border-bottom: 2px solid #000000;
  transform: rotate(45deg);
  transform-origin: center;
}

.accordion-item.active .accordion-arrow {
    transform: rotate(-135deg);
}

.accordion-content {
    padding: 0px;
    display: none;
}

.accordion-item.active .accordion-content {
    display: block;
 margin-bottom: 20px;
}


.custom-cursor {
    cursor: url('/Assets Upload/Images/Branding/cursor-2.png'), auto;
}

.prevent-scrolling {
    position: fixed;
}





.fixed-header {
  position: fixed;
  top: 0;
  left: 15px;
  width: 100%;
  
  color: none;
  text-align: left;
  padding: 0px;
  z-index: 500;
}

.content {
  margin-top: 20px; /* Adjust based on the height of your fixed header to prevent content from being hidden behind it */
}



.element {
  background-image: url('/Assets%20Upload/Images/Branding/Mo%20Labban%20Logo.png');
  width: 185px
  /* Set the size and other background properties as needed */
}
.svg-container {
    width: auto;
    height: 40px;
  margin-left: 5px;
}

.svg-container img {
    display: block;
    width: auto;
    height: 100%;
}



.image-container {
    display: inline-block; /* Wrap the container around the content */
    position: relative; /* Establish a positioning context */
    line-height: 0; /* Remove extra line height */
}
/* ... */

